Update Molecule and task configurations
Updated the Docker image in molecule.yml to use Ubuntu 24.04 and corrected the role name in converge.yml to 'darsh12.bootstrap'. Also, re-enabled tasks for installing ripgrep, fixed a typo in the fzf download URL, and switched to using 'ansible.builtin.user' in adduser.yml.

--- a/molecule/adduser/converge.yml
+++ b/molecule/adduser/converge.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: "Include bootstrap and check if user is added"
       include_role:
-        name: "bootstrap"
+        name: "darsh12.bootstrap"
       vars:
         users:
           - username: root
