--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ variables:
 
 molecule_test_ubuntu:
   <<: *molecule_test_defaults
+  before_script:
+    - apt install python3-passlib
   variables:
     MOLECULE_DISTRO: ubuntu2204
   only:
