--- a/tasks/adduser.yml
+++ b/tasks/adduser.yml
@@ -44,5 +44,6 @@
     user: "{{ new_username }}"
     key: "{{ item }}"
   with_items: "{{ ssh_public_keys }}"
-  when: ssh_public_keys is defined and new_username is defined
+  when: ssh_public_keys is defined
+  tags: ssh_keys
   become: yes
